# AnimatedMidiPlayer

./: .gitignore  CMakeLists.txt  README.md  make.bat
myproj/: default_constants.h  main.cpp  myObject.cpp  myObject.h  myScene.cpp  myScene.h  myShader.cpp  myShader.h  mySkybox.cpp  mySkybox.h  mySubObject.cpp  mySubObject.h  myText.cpp  myText.h  myTexture.cpp  myWaterFBOs.cpp  myWaterFBOs.h
myproj/models/: Sphere.mtl  Water.mtl  piano_body.mtl
myproj/models/lantern/: lantern.000.mtl
myproj/models/piano_parts/: A6s-B6b.mtl  G4.mtl
myproj/models/piano_parts/asd/: P00000.001.mtl  P00000.002.mtl  P00000.003.mtl  P00000.004.mtl  P00000.005.mtl  P00000.006.mtl  P00000.mtl  Pedal0.mtl  PianoBody.mtl  Pipe20c.001.mtl  Pipe20c.002.mtl  Pipe20c.mtl  PipeA.mtl
myproj/shaders/: basic-fragmentshader.glsl  basic-vertexshader.glsl  bump-fragmentshader.glsl  bump-vertexshader.glsl  environmentmap-fragmentshader.glsl  imageprocessing-fragmentshader.glsl  phong-fragmentshader.glsl  phong-vertexshader.glsl  skybox-fragmentshader.glsl  skybox-vertexshader.glsl  texture+phong-fragmentshader.glsl  texture+phong-vertexshader.glsl  texture-fragmentshader.glsl  texture-vertexshader.glsl  water-fragmentshader.glsl  water-vertexshader.glsl  waterReflectRefrac-fragmentshader.glsl  waterReflectRefrac-vertexshader.glsl
